[trip-10] implemented Google Maps api for finding the nearby locations